1.修改功能：删除同步历史归档和笔记到clickhouse的所有相关功能以及代码。给出需要修改的具体类或文件，不要一段一段的给我代码。
2.默认已配置本地公钥到服务器。
新增功能：
1.在设置页面，新增同步服务器的ip和路径。
2.新增上传、下载按钮，点击按钮即可上传、下载项目目录下safedraft.db。如果上传下载失败，则提示。
3.上传下载完safedraft.db，重新加载safedraft.db。

3.上传下载要放在主界面，服务器同步这里要勾选才生效。

4.发现一个bug，最新的代码，我按Ctrl+S，不能保存快照了！

5.发现一个bug，新建的界面，输入框出现的是历史归档的第一条记录，需要删除才能继续输入。

6.强制置顶之后，强制置顶的按钮没有改变状态的？跟以前的不一样了

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@
 pyobjc-framework-Quartz; sys_platform == 'darwin'
 pyobjc-framework-Cocoa; sys_platform == 'darwin'
 
-
 keyboard==0.13.5
 Nuitka==2.8.6
 ordered-set==4.1.0
@@ -12,5 +11,4 @@ pystray==0.19.5
 pywin32==311
 six==1.17.0
 zstandard==0.25.0
-
-clickhouse-driver==0.2.6
+paramiko==3.4.0
